# generative-manim

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  GenScene.py  README.md  main.py  packages.txt  pyproject.toml
.devcontainer/: devcontainer.json
api/: .env.example  .gitignore  README.md  app.py  openapi.yaml  requirements.txt
datasets/: README.md  edoh-dataset-format-pep8.jsonl  edoh-dataset-format.jsonl  edoh-dataset.jsonl  physics-01.jsonl
datasets/code/: ArgMinExample.md  ArgMinExample.py  BooleanOperations.py  BraceAnnotation.py  FixedInFrameMObjectTest.py  FollowingGraphCamera.py  GradientImageFromArray.py  GraphAreaPlot.py  HeatDiagramPlot.py  ManimCELogo.py  MovingAngle.py  MovingAround.py  MovingDots.py  MovingFrameBox.py  MovingGroupToDestination.py  MovingZoomedSceneAround.py  OpeningManim.py  PointMovingOnShapes.py  PointWithTrace.py  PolygonOnAxes.py  RotationUpdater.py  SinAndCosFunctionPlot.py  SineCurveUnitCircle.py  ThreeDCameraIllusionRotation.py  ThreeDCameraRotation.py  ThreeDLightSourcePosition.py  ThreeDSurfacePlot.py  VectorArrow.py
datasets/extract/: edoh_dataset.py
datasets/format/: formatter_edoh.py
datasets/promit/: API_Key.cfg  promit_from_GPT.py  promit_from_QianFan.py
experiments/: Generative_Manim_LangGraph_Implementation.ipynb  README.md  generative_manim_claude_sonnet.py  generative_manim_langgraph_implementation.py  langgraph_minimal_implementation.py
src/: Generator.py  main.py  utils.py
src/pages/: 1_💻_Render_Engine.py  2_🤖_Prompt_Engine.py  (+3 more)
streamlit/: Dockerfile  README.md  docker-compose.yml
(+3 files in other folders)
